--- a/views/settings.html
+++ b/views/settings.html
@@ -49,7 +49,7 @@
 	</div>
 	End Cycle-->
 
-	<!--Theme
+	<!--Theme-->
 	<div>
 		<div class="panel panel-default">
 			<div class="panel-heading">
@@ -73,7 +73,7 @@
 		</div>
 		<div id="disabled"></div>
 	</div>
-	End Theme-->
+	<!--End Theme-->
 
 	<!--Notifications
 	<div class="panel panel-default">
