--- a/davidow/platforms/android/assets/www/css/masterLight.css
+++ b/davidow/platforms/android/assets/www/css/masterLight.css
@@ -86,7 +86,6 @@ p{
   border:1px solid black;
 }
 #view-container{
-  padding-right: 60px;
   position: absolute;
   width:100%;
 }
@@ -127,7 +126,7 @@ p{
 }
 #galleryThumb{
   height:100px;
-  box-shadow: 1px 1px 10px black;
+  box-shadow: -1px 3px 4px -1px #333;
   margin-top:10px;
 }
 #exploreThumb{
@@ -135,17 +134,29 @@ p{
 }
 
 .searchbox{
-  margin-top: 2px;
-	margin-bottom: 10px;
-  	font-size: 20px;
-  	width: 100%;
-  	background: #333;
-  	border: 2px solid #ebebeb;
-  	color: white;
-  	padding: 10px;
+    margin-top: 2px; 
+    width: 80%;
+    padding: 10px;
+    z-index: 9999;
+    background: #ebebeb;
+    border: 2px solid #999ba1;
+    font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    transition: all .2s ease;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -khtml-border-radius: 10px;
 }
+
 .searchbox:focus{
 	outline: none;
+    border-color: #3b3c3e;
+  color: #3b3c3e;
 }
 
 /*Isotope Stuff*/
@@ -199,36 +210,28 @@ p{
 
 /*Nav*/
 #dropdown-menu{
-  /*display: none;*/
+  display: none;
   position: fixed;
   top: 0;
   height: 100%;
+  padding: 15px;
   background-color: #EBEBEB;
-  width: 60px;
+  width: 80%;
   z-index: 1;
   box-shadow: -2px 1px 11px rgb(183,183,183);
   color: rgb(255, 255, 255);
   text-align: center;
   right: 0;
-  transition: .8;
-  padding-top:40px;
+  transition: .8s;
 }
-
-#dropdown-menu a{
-  padding: 20px 0 20px 0;
+#dropdown-menu h2 a{
+  font-size: 25px;
+  color: #3b3c3e;
   border-bottom: 1px solid rgb(183, 183, 183);
   width: 100%;
+  padding-bottom: 20px;
   display: inline-block;
 }
-
-#dropdown-menu a .temp-icon{
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  background-color: grey;
-  margin: auto;
-}
-
 #menu-close-sheild{
   position: absolute;   
   width: 70px;
@@ -249,15 +252,16 @@ p{
 }
 .header{
   background:#DADADA;
-  padding:10px;
+  padding:6px;
   border-bottom:1px solid #A7A7A7;
   box-shadow:1px 0px 10px #9E9E9E;
-  text-align: center;
+text-align: center;
+margin-top: 1px;
 }
 
 #magnifyingGlass{
-  float: left; 
-  left: 22px; 
-  font-size:30px; 
-  top:6px
+      float: left;
+    left: 7px;
+    font-size: 30px;
+    top: 17px;
 }
