--- a/davidow/www/css/masterLight.css
+++ b/davidow/www/css/masterLight.css
@@ -89,7 +89,60 @@ p{
   position: absolute;
   width:100%;
 }
-#menu-btn, #close-btn{
+
+/* Bottom Nav */
+.bottom-nav{
+       position: fixed;
+    background-color: #000;
+    height: 65px;
+    bottom: 0;
+    padding-top: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-nav img{
+   padding-left: 6%;
+    padding-right: 6%;
+    height: 70%;
+    margin-top:4px;
+    max-width: 100%;
+    display:inline-block;
+}
+
+/*Side Nav*/
+#dropdown-menu{
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  padding: 15px;
+  background-color: #EBEBEB;
+  width: 80%;
+  z-index: 1;
+  box-shadow: -2px 1px 11px rgb(183,183,183);
+  color: rgb(255, 255, 255);
+  text-align: center;
+  right: 0;
+  transition: .8s;
+}
+#dropdown-menu h2 a{
+  font-size: 25px;
+  color: #3b3c3e;
+  border-bottom: 1px solid rgb(183, 183, 183);
+  width: 100%;
+  padding-bottom: 20px;
+  display: inline-block;
+}
+#menu-close-sheild{
+  position: absolute;   
+  width: 70px;
+  right:0px;
+  height: 100%;
+  top:0;
+}
+
+/*#menu-btn, #close-btn{
   padding: 5px 7px;
   position: fixed;
   font-size: 22px;
@@ -102,9 +155,10 @@ p{
   border: 2px solid #A7A7A7;
   box-shadow: 2px 2px 0px 0px rgba(48, 48, 48, 0.1);
 }
+
 #menu-btn span, #close-btn span{
   color: #4FC5E7;
-}
+}*/
 
 .img-header{
     padding: 20px;
@@ -159,8 +213,8 @@ p{
   color: #3b3c3e;
 }
 
-/*Isotope Stuff*/
-/**** Isotope CSS3 transitions ****/
+/*Isotope Stuff
+
 
 .isotope,
 .isotope .isotope-item {
@@ -187,7 +241,7 @@ p{
           transition-property:         transform, opacity;
 }
 
-/**** disabling Isotope CSS3 transitions ****/
+/* disabling Isotope CSS3 transitions 
 
 .isotope.no-transition,
 .isotope.no-transition .isotope-item,
@@ -206,39 +260,9 @@ p{
 .isotope-hidden.isotope-item {
   pointer-events: none;
 }
+*/
 
 
-/*Nav*/
-#dropdown-menu{
-  display: none;
-  position: fixed;
-  top: 0;
-  height: 100%;
-  padding: 15px;
-  background-color: #EBEBEB;
-  width: 80%;
-  z-index: 1;
-  box-shadow: -2px 1px 11px rgb(183,183,183);
-  color: rgb(255, 255, 255);
-  text-align: center;
-  right: 0;
-  transition: .8s;
-}
-#dropdown-menu h2 a{
-  font-size: 25px;
-  color: #3b3c3e;
-  border-bottom: 1px solid rgb(183, 183, 183);
-  width: 100%;
-  padding-bottom: 20px;
-  display: inline-block;
-}
-#menu-close-sheild{
-  position: absolute;   
-  width: 70px;
-  right:0px;
-  height: 100%;
-  top:0;
-}
 .artInfo{
   margin-left: 15px;
   margin-right: 2px;
