--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-md-6">
 
-      <!--<div class="row" id="filters">
+      <div class="row" id="filters">
         <div class="col-md-12">
           <div class="btn-group" opt-kind ok-key="filter">
             <button type='button' class='btn btn-default active' id:"filterActive" ok-sel="*">Show All</button>
@@ -35,7 +35,7 @@
             <button type="button" class="btn btn-default" ok-sel="piece.year" ok-type="integer">Year</button>
           </div>
         </div>
-      </div>-->
+      </div>
 
       <!-- ISOTOPECONTAINER -->
       <div class="row">
