--- a/davidow/www/css/masterLight.css
+++ b/davidow/www/css/masterLight.css
@@ -271,9 +271,9 @@ p{
 }
 
 .artinfo-divider{
-    width: 5em;
+    width: 100%;
     float: left;
-    border: 2px solid #5A4C4C;
+    border-top: 1px solid rgba(90, 76, 76, 0.27);
     margin-top: 20px;
     margin-bottom: 25px;
 }
