--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -1,54 +1,36 @@
 <style>
 .tilePiece{
-  height:120px;
-  width: 120px;
+  height:150px;
+  width: 150px;
+}
+.tileTitle{
+  text-align: left;
+  position: absolute;
+  bottom: 0px;
+  left: 29px;
+  color: white;
+  width: 150px;
+  background: rgba(0, 0, 0, 0.73);
 }
 </style>
 
-<h1 class="header">GALLERY</h1>
-<div class="container">
-<div class="searchbox-container">
-  <input class="searchbox" type="text" ng-model="searchText"> 
-  <div class="row">
-    <div class="col-md-6">
 
-      <div class="row" id="filters">
-        <div class="col-md-12">
-          <div class="btn-group" opt-kind ok-key="filter">
-            <button type='button' class='btn btn-default active' id:"filterActive" ok-sel="*">Show All</button>
-            <button type='button' class='btn btn-default' ok-sel=".painting">Painting</button>
-            <button type='button' class='btn btn-default' ok-sel=".sculpture">Sculpture</button>
-            <button type='button' class='btn btn-default' ok-sel=".mixedmedia">Mixed Media</button>
-            <button type='button' class='btn btn-default' ok-sel=".photography">Photography</button>
-            <button type='button' class='btn btn-default' ok-sel=".printmaking">Print Making</button>
-            <button type='button' class='btn btn-default' ok-sel=".other">Other</button>
-          </div>
-        </div>
-      </div>
+<input class="searchbox" type="text" ng-model="searchText"> 
 
-      <div class="row">
-        <div class="col-md-6">
-          <h4>Selector and Value-Based Sort</h4>
-          <div class="btn-group" opt-kind ok-key="sortBy">
-            <button type="button" class="btn btn-default" ok-sel=".artist">Artist</button>
-            <button type="button" class="btn btn-default" ok-sel=".piece_title">Title</button>
-            <button type="button" class="btn btn-default" ok-sel="piece.year" ok-type="integer">Year</button>
-          </div>
-        </div>
-      </div>
+<div class="row">
 
-      <!-- ISOTOPECONTAINER -->
-      <div class="row">
-        <div id="isotopeContainer" isotope-container ng-cloak class="ng-cloak">
-            <div ng-repeat="piece in pieces">
-              <div class="name" name="{{piece.artist}}"></div>
-              <div class="year" year="{{piece.year}}"></div>
-              <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
-             <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
-          </div>
-        <div>
-      </div>
-    </div>
+  <div class="col-xs-6" style="margin-bottom:20px;text-align:center" ng-repeat="piece in pieces | filter:searchText">
+    
+    <!--data for filtering; not shown-->
+    <div class="name" name="{{piece.artist}}"></div>
+    <div class="year" year="{{piece.year}}"></div>
+    <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
+    <!--end filter data-->
+    
+    <!--data that will be shown-->
+    <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
+    <div class="tileTitle">{{piece.piece_title}}</div>
+
   </div>
-</div>
 
+</div>
