--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -1,16 +1,33 @@
 <style>
+html,body{
+  overflow-x:hidden;
+}
 .tilePiece{
   height:150px;
   width: 150px;
 }
 .tileTitle{
   text-align: left;
-  position: absolute;
-  bottom: 0px;
-  left: 29px;
+  position: relative; 
+  /* bottom: 0px; */
+  /* left: 19px; */
   color: white;
   width: 150px;
-  background: rgba(0, 0, 0, 0.73);
+  margin: auto;
+  margin-top: -20px;
+  padding-left: 4px;
+  height:20px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.81+68,0+100 */
+background: -moz-linear-gradient(left, rgba(0,0,0,0.81) 0%, rgba(0,0,0,0.81) 68%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.81)), color-stop(68%,rgba(0,0,0,0.81)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* IE10+ */
+background: linear-gradient(to right, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
 }
 </style>
 
