--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -20,27 +20,40 @@ html,body{
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.81+68,0+100 */
-background: -moz-linear-gradient(left, rgba(0,0,0,0.81) 0%, rgba(0,0,0,0.81) 68%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.81)), color-stop(68%,rgba(0,0,0,0.81)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* IE10+ */
-background: linear-gradient(to right, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.81+68,0+100 */
+  background: -moz-linear-gradient(left, rgba(0,0,0,0.81) 0%, rgba(0,0,0,0.81) 68%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.81)), color-stop(68%,rgba(0,0,0,0.81)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* IE10+ */
+  background: linear-gradient(to right, rgba(0,0,0,0.81) 0%,rgba(0,0,0,0.81) 68%,rgba(0,0,0,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+#search-icon span{
+  position: absolute;
+  font-size: 26px;
+  color: #AFAFAF;
+  top: 16px;
+  right: 14px;
 }
 </style>
 
 
-<input class="searchbox" type="text" ng-model="searchText"> 
+<input class="searchbox" placeholder="Search" type="text" ng-model="searchText"> 
+<div id="search-icon"><span class="glyphicon glyphicon-search"></span></div>
+
+
+<div class="row">  
+  
+</div>
 
 <div class="row">
 
   <div class="col-xs-6" style="margin-bottom:20px;text-align:center" ng-repeat="piece in pieces | filter:searchText">
     
     <!--data for filtering; not shown-->
-    <div class="name" name="{{piece.artist}}"></div>
-    <div class="year" year="{{piece.year}}"></div>
+    <!--<div class="name" name="{{piece.artist}}"></div>
+    <div class="year" year="{{piece.year}}"></div>-->
     <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
     <!--end filter data-->
     
