--- a/davidow/platforms/android/assets/www/css/masterLight.css
+++ b/davidow/platforms/android/assets/www/css/masterLight.css
@@ -86,6 +86,150 @@ p{
   width:100%;
 }
 
+/*Circle Nav*/
+.circle-nav-wrapper{
+    position:fixed;
+    bottom:0;
+    right:0;
+}
+
+.menu-btn{
+                height: 4.5em;
+    width: 4.5em;
+    background: url(img/davidow-icon-alt.png)57% no-repeat;
+    border-radius: 50%;
+    background-size: 51%;
+    position: fixed;
+    background-color: #3b3c3e;
+    bottom: 5.5em;
+    right: 1em;
+    box-shadow: 3px 3px 6px -2px rgba(7,7,7,0.5);
+        border:none;
+}
+
+.csstransforms .circle-nav-wrapper {
+      font-size: 1em;
+    width: 26em;
+    height: 26em;
+    overflow: hidden;
+    position: fixed;
+    z-index: -1;
+    bottom: -5em;
+    left: 93%;
+    border-radius: 50%;
+    margin-left: -13em;
+    transform: scale(0.1);
+    transition: all .3s ease;
+}
+
+#circle-nav-wrapper > ul > li a > span > img{
+    height:100px;
+    width:100px;
+}
+
+.csstransforms .opened-nav {
+  border-radius: 50%;
+  transform: scale(1);
+}
+
+.csstransforms .circle-nav-wrapper li a span img {
+  font-size: 1.1em;
+  opacity: 0.7;
+}
+
+.csstransforms .circle-nav-wrapper ul{
+    list-style-type: none;
+}
+
+.csstransforms .circle-nav-wrapper li {
+    position: absolute;
+    font-size: 1.5em;
+    width: 10em;
+    height: 10em;
+    -webkit-transform-origin: 100% 100%;
+    -moz-transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+    left: 90px;
+    bottom: -71px;
+    margin-top: -1.3em;
+    margin-left: -10em;
+    -webkit-transition: border .3s ease;
+    -moz-transition: border .3s ease;
+    transition: border .3s ease;
+}
+
+.csstransforms .circle-nav-wrapper li a {
+     display: block;
+    font-size: 1.18em;
+    height: 9.5em;
+    width: 14.5em;
+    position: absolute;
+    bottom: 60px;
+    right: -13.25em;
+    border-radius: 50%;
+    text-decoration: none;
+    color: #fff;
+    padding-top: 1.8em;
+    text-align: center;
+}
+
+.csstransforms .circle-nav-wrapper li:first-child {
+  transform: rotate(-10deg);
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(2) {
+  transform: rotate(30deg);
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(3) {
+  transform: rotate(70deg) skew(50deg);
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(4) {
+  transform: rotate(110deg) skew(50deg);
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(5) {
+  transform: rotate(150deg) skew(50deg);
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(odd) a {
+  
+}
+
+.csstransforms .circle-nav-wrapper li:nth-child(even) a {
+  
+}
+
+/* active style */
+.csstransforms .circle-nav-wrapper li.active a {
+  background-color: #b31515;
+  background-color: hsla(0, 88%, 70%, 1);
+}
+
+/* hover style */
+.csstransforms .circle-nav-wrapper li:not(.active) a:hover,
+.csstransforms .circle-nav-wrapper li:not(.active) a:active,
+.csstransforms .circle-nav-wrapper li:not(.active) a:focus {
+  background-color: #b31515;
+  background-color: hsla(0, 88%, 70%, 1);
+}
+.csstransforms .circle-nav-wrapper li:not(.active) a:focus {
+  position: fixed; /* fix the "displacement" bug in webkit browsers when using tab key */
+}
+
+.csstransforms .opened-nav {
+    border-radius: 50%;
+    pointer-events: auto;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
+
+
+
 /* Bottom Nav */
 .bottom-nav{
        position: fixed;
@@ -269,6 +413,7 @@ p{
 
 .artist-info{
     padding:2em;
+    margin-bottom:7em;
 }
 
 .twitter{
