--- a/davidow/platforms/android/assets/www/views/tileView.html
+++ b/davidow/platforms/android/assets/www/views/tileView.html
@@ -17,8 +17,8 @@ html,body{
   margin-top: -20px;
   padding-left: 4px;
   height:20px;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
   white-space: nowrap;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.81+68,0+100 */
   background: -moz-linear-gradient(left, rgba(0,0,0,0.81) 0%, rgba(0,0,0,0.81) 68%, rgba(0,0,0,0) 100%); /* FF3.6+ */
@@ -94,7 +94,7 @@ hr{opacity: .2}
 
   <div id="menu-inner">
 
-  <div id="menu-header">Filter Gallery</div>
+  <div id="menu-header">Select a category to view</div>
   <div id="menu-close" ng-click="hideMenu()">&times</div>
   <br>
   <hr>
