--- a/davidow/www/css/masterLight.css
+++ b/davidow/www/css/masterLight.css
@@ -346,6 +346,7 @@ p{
     font-size: 22px;
     border: none;
     border-bottom: 2px solid #C9C9C9;
+    padding-left: 50px;
 }
 
 .searchbox:focus{
