added links and changed hitbox

--- a/davidow/platforms/android/assets/www/views/tileView.html
+++ b/davidow/platforms/android/assets/www/views/tileView.html
@@ -122,8 +122,8 @@
 <div id="search-icon"><span class="glyphicon glyphicon-search"></span></div>
 <input class="searchbox" placeholder="Search" type="text" ng-model="searchText"> 
 
-<div id="filter-toolbar">
-  <span id="filter-icon" ng-click="showMenu()" class="glyphicon glyphicon-filter"></span>
+<div id="filter-toolbar" ng-click="showMenu()">
+  <span id="filter-icon" class="glyphicon glyphicon-filter"></span>
   <span id="active-filters">Showing all pieces</span>
 </div>
 
