--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -122,8 +122,8 @@
 <div id="search-icon"><span class="glyphicon glyphicon-search"></span></div>
 <input class="searchbox" placeholder="Search" type="text" ng-model="searchText"> 
 
-<div id="filter-toolbar">
-  <span id="filter-icon" ng-click="showMenu()" class="glyphicon glyphicon-filter"></span>
+<div id="filter-toolbar" ng-click="showMenu()">
+  <span id="filter-icon" class="glyphicon glyphicon-filter"></span>
   <span id="active-filters">Showing all pieces</span>
 </div>
 
@@ -196,9 +196,10 @@
     
     <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
     <div class="title" data-medium="{{piece.piece_category}}" style="padding:0;"></div>
-    <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
-    <div class="tileTitle">{{piece.piece_title}}</div>
-
+    <a href="#/piece/{{piece.id}}">
+      <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
+      <div class="tileTitle">{{piece.piece_title}}</div>
+    </a>
   </div>
 
 </div>
