--- a/davidow/platforms/android/assets/www/views/tileView.html
+++ b/davidow/platforms/android/assets/www/views/tileView.html
@@ -196,9 +196,10 @@
     
     <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
     <div class="title" data-medium="{{piece.piece_category}}" style="padding:0;"></div>
-    <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
-    <div class="tileTitle">{{piece.piece_title}}</div>
-
+    <a href="#/piece/{{piece.id}}">
+      <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
+      <div class="tileTitle">{{piece.piece_title}}</div>
+    </a>
   </div>
 
 </div>
