--- a/davidow/platforms/android/assets/www/views/map.html
+++ b/davidow/platforms/android/assets/www/views/map.html
@@ -20,7 +20,7 @@
 		padding-top: 125px;
 	}
 	object{
-		width:2000px;
+		width:500px;
 	}
 
 	#zoom-in{
@@ -69,7 +69,7 @@
 <!--map-->
 <div id="map-container">
 	
-	<object data="img/F1.svg" type="image/svg+xml">
+	<object data="img/Floor_1.svg" type="image/svg+xml">
 
 	</object>
 
