--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -21,7 +21,7 @@
 	}
 	object{
 		width:500px;
-		transition: .3s;
+		-webkit-transition:width 300ms ease-in-out, height 300ms ease-in-out;
 	}
 
 	#zoom-in{
