--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -22,6 +22,7 @@
 	object{
 		width:500px;
 		-webkit-transition:width 300ms ease-in-out, height 300ms ease-in-out;
+		-webkit-transform: translateZ(0);
 	}
 
 	#zoom-in{
