svg manipulation via js

--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -25,7 +25,6 @@
 	object{
 		width:100%;
 		padding: 0 10px;
-		-webkit-transition:width 300ms ease-in-out, height 300ms ease-in-out;
 		margin-bottom: 100px;
 	}
 
@@ -120,8 +119,12 @@
 <!--map-->
 <div id="map-container">
 	
-	<object data="img/Floors.svg" type="image/svg+xml">
+	<!--
+	<object data="img/Floors.svg" type="image/svg+xml"></object>
+	-->
 
-	</object>
+	<div id="svgload" style="height:1000px; width: 100%;"></div>
+
+	<br><br><br><br><br>
 
 </div>
