--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -23,7 +23,6 @@
 		padding-top: 125px;
 	}
 	object{
-		width:100%;
 		padding: 0 10px;
 		margin-bottom: 100px;
 	}
@@ -99,11 +98,22 @@
 		border-bottom: 10px solid transparent; 
 		border-right:20px solid white; 
   	}
+
+
+  	.found{
+  		fill: red;
+  		transition: 1s;
+  	}
+  	.normal{
+  		fill: #4FC5E7;
+  		transition: 1s;
+  	}
+
 </style>
 
 <!--Slider-->
 <div id="slider">
-	<div class="tile-piece" ng-repeat="piece in pieces">
+	<div class="tile-piece" ng-repeat="piece in pieces | orderBy : floor">
 		<img src="{{piece.thumb_url[0]}}" />
 	</div>
 </div>
@@ -117,14 +127,11 @@
 <div id="zoom-out">-</div>
 
 <!--map-->
-<div id="map-container">
-	
-	<!--
-	<object data="img/Floors.svg" type="image/svg+xml"></object>
-	-->
 
-	<div id="svgload" style="height:1000px; width: 100%;"></div>
+<!--
+<object data="img/Floors.svg" type="image/svg+xml"></object>
+-->
 
-	<br><br><br><br><br>
+<object id="svgload"></object>
 
-</div>
+<br><br><br><br><br>
