--- a/davidow/platforms/android/assets/www/views/map.html
+++ b/davidow/platforms/android/assets/www/views/map.html
@@ -114,7 +114,7 @@
 <!--Slider-->
 <div id="slider">
 	<div class="tile-piece" ng-repeat="piece in pieces | orderBy : floor">
-		<img src="{{piece.thumb_url[0]}}" />
+		<a href="#/piece/{{piece.id}}"><img src="{{piece.thumb_url[0]}}" /></a>
 	</div>
 </div>
 <div id="piece-title"></div>
