--- a/davidow/www/views/piece.html
+++ b/davidow/www/views/piece.html
@@ -1,4 +1,4 @@
-<img id="piece" src="{{currentPiece.thumb_url[3]}}" class="image-responsive"/>
+<img id="piece" src="{{currentPiece.full_url}}" class="image-responsive"/>
 
 <div class="art-info"><h2>{{currentPiece.piece_title}}<span ngShow="{{currentPiece.piece_year}} != ''">{{currentPiece.piece_year}}</span></h2>
 <h3>{{currentPiece.artist}}</h3>
