--- a/davidow/www/views/tileView.html
+++ b/davidow/www/views/tileView.html
@@ -212,7 +212,7 @@
     <div class="title" title="{{piece.piece_title}}" style="padding:0;"></div>
     <div class="title" data-medium="{{piece.piece_category}}" style="padding:0;"></div>
     <a href="#/piece/{{piece.id}}">
-      <img class="tilePiece" src="{{piece.thumb_url[0]}}"/>
+      <img class="tilePiece" src="{{piece.thumb_url}}"/>
       <div class="tileTitle">{{piece.piece_title}}</div>
     </a>
   </div>
