--- a/davidow/www/views/gallery.html
+++ b/davidow/www/views/gallery.html
@@ -9,7 +9,7 @@
 
 		<div class="row">
 			<div class= "col-xs-4">
-				<img id="galleryThumb" src="{{piece.thumb_url[0]}}"/>
+				<img id="galleryThumb" src="{{piece.thumb_url}}"/>
 			</div>
 			<div class="col-xs-6" id="galleryInfo">
 				<h3>{{piece.piece_title}}</h3>
